<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#AEDBCE"
    tools:context=".ViewDaftarBarang"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:background="@color/scnd_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/HdNama"
            android:layout_width="131dp"
            android:layout_height="46dp"
            android:layout_marginLeft="2dp"
            android:background="@drawable/bordertb"
            android:padding="4dp"
            android:text="@string/nama_hd"
            android:gravity="center"
            android:textColor="#455A64"
            android:textSize="12dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/HdStok"
            android:layout_width="131dp"
            android:layout_height="46dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/bordertb"
            android:padding="4dp"
            android:text="@string/qty_pcs"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="12dp"
            android:textColor="#455A64" />

        <TextView
            android:id="@+id/HdHarga"
            android:layout_width="131dp"
            android:layout_height="46dp"
            android:layout_marginLeft="4dp"
            android:background="@drawable/bordertb"
            android:padding="4dp"
            android:text="@string/harga"
            android:textStyle="bold"
            android:textSize="12dp"
            android:gravity="center"
            android:textColor="#455A64" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="132dp">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/iv_addBarang"
        android:layout_width="78dp"
        android:layout_height="82dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        app:srcCompat="@drawable/ic_add" />
</androidx.constraintlayout.widget.ConstraintLayout>